--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -312,6 +312,7 @@ button.bg-primary:hover, button.bg-primary:focus {
   position: absolute;
   top: 20px;
   right: 30px;
+  cursor: pointer;
 }
 
 .event-item-isotope {
