--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -266,6 +266,10 @@ button.bg-primary:hover, button.bg-primary:focus {
   margin-bottom: 10px;
 }
 
+.search-form select {
+  margin-bottom: 10px;
+}
+
 .weather_icon {
   height: 60px !important; 
   width: 60px !important;
