setting up save to favorites

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -227,7 +227,7 @@ button.bg-primary:hover, button.bg-primary:focus {
   border-color: #1a252f;
 }
 
-.btn-venue-details, .btn-event-details, .get-weather, .searches, .category-button {
+.btn-venue-details, .btn-event-details, .get-weather, .searches, .category-button, .btn-save-event {
   background-color: #450F5D;
   color: #fff;
 }
@@ -237,7 +237,7 @@ button.bg-primary:hover, button.bg-primary:focus {
   margin: 5px;
 }
 
-.btn-venue-details:hover, .btn-event-details:hover, .get-weather:hover, .searches:hover, .category-button:hover {
+.btn-venue-details:hover, .btn-event-details:hover, .get-weather:hover, .searches:hover, .category-button:hover, .btn-save-event:hover {
   background-color: #9b359a;
 }
 
