event list item image now has lightbox added to it

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -257,7 +257,7 @@ button.bg-primary:hover, button.bg-primary:focus {
 }
 
 .event-item img {
-  border: 5px solid;
+  border: 5px solid #450F5D;
   border-radius: 10px;
   width: 100%;
 }
