styled up the search form

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -335,3 +335,59 @@ hr {
 .modal-backdrop {
   z-index: -1;
 }
+
+/*CSS FOR SEARCH FORM*/
+.navbar-form .search-form {
+  height: 260px;
+}
+:focus {
+  outline: none;
+}
+
+.col-12 {
+  float: left;
+  width: 100%;
+  left: -8px;
+  margin: 10px;
+  position: relative;
+  margin-bottom: -10px;
+}
+
+/* necessary to give position: relative to parent. */
+
+.navbar-form .search-form input[type="text"] {
+  color: #fff;
+  width: 100%;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+  background: transparent;
+  border: 1px solid;
+}
+.navbar-form .search-form input::placeholder {
+    color: #DCDCDC;
+    opacity: 1; /* Firefox */
+}
+
+.effect-1 {
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+}
+
+.effect-1~.focus-border {
+  position: absolute;
+  bottom: 17px;
+  left: 20px;
+  width: 0;
+  height: 2px;
+  background-color: #450F5D;
+  transition: 0.4s;
+}
+
+.effect-1:focus~.focus-border {
+  width: 80%;
+  transition: 0.4s;
+}
+
+/*END CSS FOR SEARCH FORM*/
