--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -425,10 +425,10 @@ hr {
   border: 3px solid #9b359a;
   background-color: #D0D0D0;
   color: #212529;
+  height: 200px;
 }
 
 #forecastWidgets {
-  margin: 1%;
-  
+  margin-left: 5px;  
 }
 
